add codecov file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,3 +12,5 @@ jobs:
           java-version: 18
       - name: Install dependencies, run tests
         run: gradle build
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
